# opus-flow

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py  server.py
apps/eval/: run.py
config/: flow_eval.json  models.yaml
docs/: STATUS.md
src/flow/: __init__.py  audit.py  daemon.py  eval.py  gate.py  gui.py  gui_windows.py  models.py  planner.py  redact.py  registry.py  scope.py  server.py  shell.py  tools.py  workflows.py
tests/: test_flow.py
