[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opus-flow"
version = "0.1.0"
description = "OPUS FLOW — lokaler Desktop-/Dev-Automations-Agent (F0: read-only Tools via MCP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.4"]
# MCP-Server (Broker-Schicht). Optional: Tool-Logik + Tests laufen ohne das SDK.
mcp = ["mcp>=1.9"]

[project.scripts]
opus-flow-mcp = "src.flow.server:main"
opus-flow-serve = "apps.api.server:main"

[tool.setuptools.packages.find]
include = ["src*", "apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "apps"]
mypy_path = "."
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
# mcp = optionales Extra, lazy importiert in src/flow/server.py. Robust ob installiert oder nicht.
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastMCP-@server.tool()-Dekorator je nach SDK-Installationszustand typisiert/Any.
module = ["src.flow.server"]
disable_error_code = ["untyped-decorator"]
